@@ -532,6 +532,19 @@ BEGIN
                     IDC_STATIC,7,78,286,48
 END
 
+IDD_URL DIALOGEX 0, 0, 234, 55
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "URL"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "URL:",IDC_LABEL,7,14,35,8
+    DEFPUSHBUTTON   "&OK",IDOK,120,34,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,177,34,50,14
+    COMBOBOX        IDC_URLCOMBO,49,12,178,66,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -782,6 +795,16 @@ BEGIN
         VERTGUIDE, 242
         TOPMARGIN, 7
         BOTTOMMARGIN, 192
+    END
+
+    IDD_URL, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 227
+        VERTGUIDE, 42
+        VERTGUIDE, 170
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 48
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1086,12 +1109,12 @@ BEGIN
     IDS_PROC_RENAME         "Rename %s"
 END
 
-#endif    // Englisch (USA) resources
+#endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
 /////////////////////////////////////////////////////////////////////////////
-// Deutsch (Schweiz) resources
+// German (Switzerland) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_DES)
 #ifdef _WIN32
@@ -1134,7 +1157,7 @@ END
 
 #endif    // APSTUDIO_INVOKED
 
-#endif    // Deutsch (Schweiz) resources
+#endif    // German (Switzerland) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
