@@ -47,6 +47,7 @@
 #include "ChangedDlg.h"
 #include "RepositoryBrowser.h"
 #include "BlameDlg.h"
+#include "URLDlg.h"
 
 
 /**
