@@ -558,6 +558,9 @@
 				<File
 					RelativePath="UpdateDlg.cpp">
 				</File>
+				<File
+					RelativePath=".\URLDlg.cpp">
+				</File>
 			</Filter>
 			<Filter
 				Name="Header Files"
@@ -648,6 +651,9 @@
 				</File>
 				<File
 					RelativePath="UpdateDlg.h">
+				</File>
+				<File
+					RelativePath=".\URLDlg.h">
 				</File>
 			</Filter>
 			<Filter
@@ -747,10 +753,10 @@
 					RelativePath="..\Languages\res\ssh.ico">
 				</File>
 				<File
-					RelativePath="..\Languages\res\Tortoise.ico">
+					RelativePath="..\Icons\Tortoise.ico">
 				</File>
 				<File
-					RelativePath="..\Icons\Tortoise.ico">
+					RelativePath="..\Languages\res\Tortoise.ico">
 				</File>
 				<File
 					RelativePath="..\Icons\Tortoise13by13.ico">
