@@ -1,0 +1,105 @@
+// TortoiseSVN - a Windows shell extension for easy version control
+
+// Copyright (C) 2003-2004 - Stefan Kueng
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+#include "stdafx.h"
+#include "TortoiseProc.h"
+#include "URLDlg.h"
+#include ".\urldlg.h"
+
+
+// CURLDlg dialog
+
+IMPLEMENT_DYNAMIC(CURLDlg, CDialog)
+CURLDlg::CURLDlg(CWnd* pParent /*=NULL*/)
+	: CDialog(CURLDlg::IDD, pParent)
+{
+	m_hIcon = AfxGetApp()->LoadIcon(IDR_MAINFRAME);
+	m_url = _T("");
+}
+
+CURLDlg::~CURLDlg()
+{
+}
+
+void CURLDlg::DoDataExchange(CDataExchange* pDX)
+{
+	CDialog::DoDataExchange(pDX);
+	DDX_Control(pDX, IDC_URLCOMBO, m_URLCombo);
+}
+
+
+BEGIN_MESSAGE_MAP(CURLDlg, CDialog)
+	ON_WM_PAINT()
+	ON_WM_QUERYDRAGICON()
+END_MESSAGE_MAP()
+
+
+// CURLDlg message handlers
+
+void CURLDlg::OnPaint() 
+{
+	if (IsIconic())
+	{
+		CPaintDC dc(this); // device context for painting
+
+		SendMessage(WM_ICONERASEBKGND, reinterpret_cast<WPARAM>(dc.GetSafeHdc()), 0);
+
+		// Center icon in client rectangle
+		int cxIcon = GetSystemMetrics(SM_CXICON);
+		int cyIcon = GetSystemMetrics(SM_CYICON);
+		CRect rect;
+		GetClientRect(&rect);
+		int x = (rect.Width() - cxIcon + 1) / 2;
+		int y = (rect.Height() - cyIcon + 1) / 2;
+
+		// Draw the icon
+		dc.DrawIcon(x, y, m_hIcon);
+	}
+	else
+	{
+		CDialog::OnPaint();
+	}
+}
+
+// The system calls this function to obtain the cursor to display while the user drags
+//  the minimized window.
+HCURSOR CURLDlg::OnQueryDragIcon()
+{
+	return static_cast<HCURSOR>(m_hIcon);
+}
+
+BOOL CURLDlg::OnInitDialog()
+{
+	CDialog::OnInitDialog();
+
+	m_URLCombo.LoadHistory(_T("repoURLS"), _T("url"));
+
+	return TRUE;  // return TRUE unless you set the focus to a control
+	// EXCEPTION: OCX Property Pages should return FALSE
+}
+
+void CURLDlg::OnOK()
+{
+	if (m_URLCombo.IsWindowEnabled())
+	{
+		m_URLCombo.SaveHistory();
+		m_url = m_URLCombo.GetString();
+		UpdateData();
+	} // if (m_URLCombo.IsWindowEnabled()) 
+
+	CDialog::OnOK();
+}
