@@ -1,11 +1,11 @@
-#define FILEVER        1,0,0,$WCREV$
-#define PRODUCTVER     1,0,0,$WCREV$
-#define STRFILEVER     "1, 0, 0, $WCREV$\0"
-#define STRPRODUCTVER  "1, 0, 0, $WCREV$\0"
+#define FILEVER        1,0,1,$WCREV$
+#define PRODUCTVER     1,0,1,$WCREV$
+#define STRFILEVER     "1, 0, 1, $WCREV$\0"
+#define STRPRODUCTVER  "1, 0, 1, $WCREV$\0"
 
 #define TSVN_VERMAJOR             1
 #define TSVN_VERMINOR             0
-#define TSVN_VERMICRO             0
+#define TSVN_VERMICRO             1
 #define TSVN_VERBUILD			  $WCREV$
 
 
